--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <li><a href="https://rmcong.github.io/"><font color="#1C86EE">Runmin Cong (Ph.D Candidate at TJU, China)</font></li> 
 </ul>
 <br>
- 
+ <div align="center"><a href="http://www.amazingcounters.com"><img border="0" src="http://cc.amazingcounters.com/counter.php?i=3230662&c=9692299" alt="AmazingCounters.com"></a></div>
 </section>
 
 </div>
