--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 </ul>
 <br>
   
- <script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=pPHWAkKgmzsFC_v7-3ndOuL5q3qL_EhEE16zTJwxtRw"></script>
+ <a href="https://clustrmaps.com/site/1aov3"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=pPHWAkKgmzsFC_v7-3ndOuL5q3qL_EhEE16zTJwxtRw&cl=ffffff" /></a>
  <div align="center"><a href="http://www.amazingcounters.com"><img border="0" src="http://cc.amazingcounters.com/counter.php?i=3230662&c=9692299" alt="AmazingCounters.com"></a></div>
 </section>
 
