--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 </ul>
 <br>
   
-<div <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=pPHWAkKgmzsFC_v7-3ndOuL5q3qL_EhEE16zTJwxtRw&cl=ffffff&w=a"></script></div>
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=pPHWAkKgmzsFC_v7-3ndOuL5q3qL_EhEE16zTJwxtRw&cl=ffffff&w=a"></script>
  <div align="center"><a href="http://www.amazingcounters.com"><img border="0" src="http://cc.amazingcounters.com/counter.php?i=3230662&c=9692299" alt="AmazingCounters.com"></a></div>
 </section>
 
