--- a/sub_publication.html
+++ b/sub_publication.html
@@ -90,7 +90,15 @@
 
 <li>Bo Wang, Jichang Guo, Yan Zhang, <strong>Chongyi Li</strong>, Hierarchical feature concatenation-based kernel sparse representations for image categorization, <strong><ud2>The Visual Computer (TVC)</ud2></strong> (SCI, IF：1.468), 2016.  <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/Hierarchical%20feature%20concatenation-based%20kernel%20sparse%20representations%20for%20image%20categorization.pdf" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>
 
+</ol>
   
+<h4>
+<a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Patent:</h4>
+
+<ol>
+  
+<li> ZL 2016 1 0606187.9 <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/%E5%8F%91%E6%98%8E%E4%B8%93%E5%88%A9%E8%AF%81%E4%B9%A6-%E4%B8%80%E7%A7%8D%E5%9F%BA%E4%BA%8E%E6%9C%80%E4%BC%98%E5%8C%96%E9%A2%9C%E8%89%B2%E4%BF%AE%E6%AD%A3%E5%92%8C%E5%9B%9E%E5%BD%92%E6%A8%A1%E5%9E%8B%E7%9A%84%E6%B0%B4%E4%B8%8B%E5%9B%BE%E5%83%8F%E5%A4%8D%E5%8E%9F%E6%96%B9%E6%B3%95.jpg" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>
+
 
 
 </ol>
