--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 
 <ul>
 <li>IEEE Transactions on Image Processing</li>
+<li>IEEE Transactions on Cybernetics</li>
 <li>IEEE Transactions on Instrumentation and Measurement</li>
 <li>IEEE Transactions on Circuits and Systems II: Express Briefs</li>  
 <li>IEEE Signal Processing Letters</li>
