--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 <li>EURASIP Journal on Image and Video Processing</li> 
 <li>Elsevier Journal of Computers & Graphics</li>
 <li>International Journal of Electrical and Computer Engineering</li>
-<li>24th International Conference on Pattern Recognition 2018</li>
-<li>Program Committee Member, ACM International Conference on Multimedia (ACM MM), Nice, France, 2019</li>.
+<li>24th International Conference on Pattern Recognition (ICPR) 2018</li>
+<li>27th ACM International Conference on Multimedia (ACM MM), Nice, France, 2019 (Program Committee Member)</li>.
 </ul>
 <br>
 <hr />    
