--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <ul>
 <li>One China Patent has been authorized by State Intellectual Property Office.</li>
-<li>Program Committee Member, ACM International Conference on Multimedia (ACM MM), Nice, France, 2019</li>.
+<li>Program Committee Member, ACM International Conference on Multimedia (ACM MM), Nice, France, 2019</li>
 <li>We released our TIP 2016 underwater image enhancement code. Have fun! <a href="https://github.com/Li-Chongyi/TIP2016-code" target="_blank"><font color="#ff0000">[Github Link]</font></a></a></li> 
 <br>If you use this code, please cite the related papers. Thanks.<br>
 <br>C. Li, J. Guo, R. Cong, et al., “Underwater image enhancement by dehazing with minimum information loss and histogram distribution prior,” IEEE Trans. Image Process., vol. 25, no. 12, pp.5664-5677, 2016.<br>
