--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 <li>Pattern Recognition Letters</li>
 <li>Machine Vision and Applications</li>
 <li>EURASIP Journal on Image and Video Processing</li> 
+<li>Signal Processing: Image Communication</li>
 <li>Elsevier Journal of Computers & Graphics</li>
 <li>International Journal of Electrical and Computer Engineering</li>
 <li>24th International Conference on Pattern Recognition (ICPR), Beijing, China, 2018</li>
