--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 <li>One China Patent has been authorized by State Intellectual Property Office.</li>
 <li>Program Committee Member, ACM International Conference on Multimedia (ACM MM), Nice, France, 2019</li>
 <li>We released our TIP 2016 underwater image enhancement code. Have fun! <a href="https://github.com/Li-Chongyi/TIP2016-code" target="_blank"><font color="#ff0000">[Github Link]</font></a></a></li> 
-If you use this code, please cite the related papers. Thanks.
-C. Li, J. Guo, R. Cong, et al., “Underwater image enhancement by dehazing with minimum information loss and histogram distribution prior,” IEEE Trans. Image Process., vol. 25, no. 12, pp.5664-5677, 2016.
-C. Li, J. Guo, S. Chen, et al., “Underwater image restoration based on minimum information loss principle and optical properties of underwater imaging”, IEEE ICIP , pp. 1993-1997 (2016).
+<p If you use this code, please cite the related papers. Thanks.</p>
+<p C. Li, J. Guo, R. Cong, et al., “Underwater image enhancement by dehazing with minimum information loss and histogram distribution prior,” IEEE Trans. Image Process., vol. 25, no. 12, pp.5664-5677, 2016. </p>
+<p C. Li, J. Guo, S. Chen, et al., “Underwater image restoration based on minimum information loss principle and optical properties of underwater imaging”, IEEE ICIP , pp. 1993-1997 (2016). </p>
  
 <li>Chunle Guo<sup>*</sup>, <strong>Chongyi Li<sup>*</sup></strong>, Jichang Guo, et al, <ud2>Hierarchical Features Driven Residual Learning for Depth Map Super-Resolution</ud2> is accepted by <strong>IEEE Transaction on Image Processing</strong>.</li> (<sup>*</sup>equal contribution and corresponding author)
 </ul>
