--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <ul>
 <div style="text-align: justify; display: block; margin-right: auto;">
 <p><strong>image processing, computer vision, deep learning, particularly in the domains of</strong> 
-  <li>image restoration and enhancement, such as images captured in adverse weather (hazy, foggy, sandy, dusty, rainy, snowy day) and special circumstances (underwater, weak illumination);</li>
+  <li>image and video restoration and enhancement, such as images and videos captured in adverse weather (hazy, foggy, sandy, dusty, rainy, snowy day) and special circumstances (underwater, weak illumination);</li>
   <li>RGB-D data related applications, such as color image guided depth super-resolution reconstruction and RGB-D salient object detection;</li>
   <li>medical image processing, such as fundus image enhancement and segmentation.</li>
 
