--- a/proj_Emerging_water.html
+++ b/proj_Emerging_water.html
@@ -39,7 +39,7 @@
 
 <h4>
 <a id="Introduction-page" class="anchor" href="#Introduction-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Introduction:</h4>
-
+<div style="text-align: justify; display: block; margin-right: auto;">
 <p>Underwater vision suffers from severe effects due to selective attenuation and scattering when light propagates
 through water. Such degradation not only affects the quality of underwater images but limits the ability of vision tasks. Different
 from existing methods which either ignore the wavelength dependence on the attenuation or assume a specific spectral profile, we
@@ -51,7 +51,7 @@ meanwhile the color is similar to the images which were taken without the water.
 under diverse scenes show that our method produces visually pleasing results, even outperforms the art-of-the-state methods. Besides, our method can improve the performance of vision tasks.
 </p>
 
-<div style="text-align: center; display: block; margin-right: auto;">
+
 <img src="sub_img/Emerging_results.png" border="0" width="600"><br></div><br>
 
 
@@ -67,6 +67,7 @@ under diverse scenes show that our method produces visually pleasing results, ev
  
 <hr />
 <h4>Results and User Study:</h4>
+<div style="text-align: justify; display: block; margin-right: auto;">
 <p>
  For the user study, the results of different methods were randomly displayed on the screen and compared with the corresponding raw underwater images. After that, we invited 10 participants who had experience with image processing to score results. There was no time limitation for each participant. Moreover, the participants did not know which results were
  produced by our method. The scores ranged from 1 (worst) to 8 (best). As baseline, we set the scores of raw underwater images to 3. We expected the good result has high contrast and visibility, abundant details, in especial the color as if the image was taken without the water. On the contrary, the bad result has low visibility, over-enhanced regions, serious artifacts and noise, and inauthentic color.
