--- a/proj_Emerging_water.html
+++ b/proj_Emerging_water.html
@@ -51,7 +51,7 @@ meanwhile the color is similar to the images which were taken without the water.
 under diverse scenes show that our method produces visually pleasing results, even outperforms the art-of-the-state methods. Besides, our method can improve the performance of vision tasks.
 </p>
 
-
+<div style="text-align: center; display: block; margin-right: auto;">
 <img src="sub_img/Emerging_results.png" border="0" width="600"><br></div><br>
 
 
