--- a/proj_lowlight.html
+++ b/proj_lowlight.html
@@ -39,7 +39,7 @@
 
 <h4>
 <a id="Introduction-page" class="anchor" href="#Introduction-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Introduction:</h4>
-
+<div style="text-align: justify; display: block; margin-right: auto;">
 <p>Weak illumination or low light image enhancement as pre-processing is needed in many computer vision
 tasks. Existing methods show limitations when they are used to enhance weakly illuminated images,
 especially for the images captured under diverse illumination circumstances. In this letter, we propose
