--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
+<li>Bo Wang and Chongyi Li, <ud2> A Visual Hierarchical Framework Based Model for Underwater Image Enhancement</ud2> is accepted by <strong>Frontiers of Computer Science</strong>.</li>
 <li>One China Patent has been authorized by State Intellectual Property Office.</li>
 <li>Program Committee Member, ACM International Conference on Multimedia (ACM MM), Nice, France, 2019</li>
 <li>We released our TIP 2016 underwater image enhancement code. Have fun! <a href="https://github.com/Li-Chongyi/TIP2016-code" target="_blank"><font color="#ff0000">[Github Link]</font></a></a></li> 
