--- a/sub_publication.html
+++ b/sub_publication.html
@@ -42,10 +42,18 @@
 </ol>   
   
 <h4>
+<a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2019:</h4>
+
+<ol>
+<li> Bo Wang and <strong>Chongyi Li</strong>, A visual hierarchical framework based model for underwater image enhancement, <strong><ud2>Frontiers of Computer Science</ud2></strong> (SCI, IF=1.105), 2019.  <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/A%20visual%20hierarchical%20framework%20based%20model%20for%20underwater.pdf" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>  
+</ol>  
+  
+<h4>
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2018:</h4>
 
 <ol>
-  <li> Chunle Guo<sup>*</sup>, <strong><U>Chongyi Li<sup>*</sup></U></strong>, Jichang Guo, et al., Hierarchical Features Driven Residual Learning for Depth Map Super-Resolution, <strong><ud2>IEEE Transaction on Image Processing</ud2></strong> (SCI, IF=5.07), 2018. (<sup>*</sup>equal contribution; <U>corresponding author</U>)  <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8579111" target="_blank"><font color="#1C86EE">[PDF]</font></a></li>
+
+<li> Chunle Guo<sup>*</sup>, <strong><U>Chongyi Li<sup>*</sup></U></strong>, Jichang Guo, et al., Hierarchical Features Driven Residual Learning for Depth Map Super-Resolution, <strong><ud2>IEEE Transaction on Image Processing</ud2></strong> (SCI, IF=5.07), 2018. (<sup>*</sup>equal contribution; <U>corresponding author</U>)  <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8579111" target="_blank"><font color="#1C86EE">[PDF]</font></a></li>
 <li> <strong>Chongyi Li</strong>, Jichang Guo, Fatih Porikli, et al., A convolutional neural network cascade for single image dehazing, <strong><ud2>IEEE Access</ud2></strong> (SCI, IF=3.244), 2018.  <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8323372" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>
 <li> <strong>Chongyi Li</strong>, Jichang Guo, Fatih Porikli, et al., LightenNet: a convolutional neural network for weakly illuminated image enhancement,  <strong><ud2>Pattern Recognition Letters (PRL)</ud2> </strong> (SCI, IF=1.995), 2018. <a href="http://www.porikli.com/mysite/pdfs/porikli%202018%20-%20LightenNet:%20a%20Convolutional%20Neural%20Network%20for%20weakly%20illuminated%20image%20enhancement.pdf" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li> 
 <li> <strong>Chongyi Li</strong>, Jichang Guo, Chunle Guo, Emerging from water: underwater iamge color correction based on weakly supervised color transfer, <strong><ud2>IEEE Signal Processing Letters (SPL)</ud2> </strong> (SCI, IF=2.528), 2018. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/Emerging%20From%20Water_Underwater%20Image%20Color%20Correction%20Based%20on%20Weakly%20Supervised%20Color%20Transfer%20.pdf" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>   
