--- a/proj_SR.html
+++ b/proj_SR.html
@@ -59,8 +59,16 @@
  
 <hr />
 <h4>Our results: <a href="https://pan.baidu.com/s/1C6MLF975REXGxPrRfH6pmA" target="_blank"><font color="#ff0000">[Baidu Cloud Link, PASSWORD: 08lb]</font></a> </h4>
-
-<hr />
+<h4>TensorFlow Codes: 
+     2x_MODLE: <a href="https://pan.baidu.com/s/1C6MLF975REXGxPrRfH6pmA" target="_blank"><font color="#ff0000">[Baidu Cloud Link, PASSWORD: 08lb]</font></a> </h4>
+     3x_MODLE: <a href="https://pan.baidu.com/s/1C6MLF975REXGxPrRfH6pmA" target="_blank"><font color="#ff0000">[Baidu Cloud Link, PASSWORD: 08lb]</font></a> </h4>
+     4x_MODLE: <a href="https://pan.baidu.com/s/1C6MLF975REXGxPrRfH6pmA" target="_blank"><font color="#ff0000">[Baidu Cloud Link, PASSWORD: 08lb]</font></a> </h4>
+     8x_MODLE: <a href="https://pan.baidu.com/s/1C6MLF975REXGxPrRfH6pmA" target="_blank"><font color="#ff0000">[Baidu Cloud Link, PASSWORD: 08lb]</font></a> </h4>
+     16x_MODLE: <a href="https://pan.baidu.com/s/1C6MLF975REXGxPrRfH6pmA" target="_blank"><font color="#ff0000">[Baidu Cloud Link, PASSWORD: 08lb]</font></a> </h4>
+     
+     1. Put the testing images into DATA_TEST and follow the format of exmples; 2. Python main.py; and 3. Find the results in the Sample (down.png is the bicubic input, rgb.png is the intensity of RGB image, sr.png is our result, and up.png is the corresponding GT.).
+  
+  <hr />
         
 
  
