--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <ul>
 <li>We released our TIP 2019 depth super-resolution code. Have fun! <a href="https://li-chongyi.github.io/proj_SR.html" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li> 
-<p> If you use this code, please cite the related papers. Thanks.</p>
+<p> If you use this code, please cite the related paper. Thanks.</p>
 <p> C. Guo, C. Li, J. Guo, et al., “Hierarchical Features Driven Residual Learning for Depth Map Super-Resolution,” IEEE Trans. Image Process., vol. 28, no. 5, pp.2545-2557, 2019. </p>
 <li>Bo Wang and Chongyi Li, <ud2> A Visual Hierarchical Framework Based Model for Underwater Image Enhancement</ud2> is accepted by <strong>Frontiers of Computer Science</strong>.</li>
 <li>One China Patent has been authorized by State Intellectual Property Office.</li>
