--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Special Issues:</h2>  
   
 <ul>
-<li><font color="#00ffff">APSIPA ASC 2019</font>: Special Session on Multi-source Data Processing and Analysis: Models, Methods and Applications <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/APSIPA-ASC-2019-CfP.pdf" target="_blank"><font color="#ff0000">[call for papers]</font></a></a></li> 
+<li><font color="#000000">APSIPA ASC 2019</font><a href="http://www.apsipa2019.org/#" target="_blank"><font color="#ff0000">[Link]</font>: Special Session on Multi-source Data Processing and Analysis: Models, Methods and Applications <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/APSIPA-ASC-2019-CfP.pdf" target="_blank"><font color="#ff0000">[call for papers]</font></a></a></li> 
 </ul>
 <br>
 <hr />
