--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
-<li> <strong>Chongyi Li</strong>, Runmin Cong, Junhui Hou, Sanyi Zhang, Yue Qian, Sam Kwon, <ud2>Nested Network with Two-Stream Pyramid for Salient Object Detection in Optical Remote Sensing Images</ud2> is accepted by <strong>IEEE Transaction on Geoscience and Remote Sensing</strong>.</li> 
+<li> <strong>Chongyi Li</strong>, Runmin Cong, Junhui Hou, Sanyi Zhang, Yue Qian, Sam Kwong, <ud2>Nested Network with Two-Stream Pyramid for Salient Object Detection in Optical Remote Sensing Images</ud2> is accepted by <strong>IEEE Transactions on Geoscience and Remote Sensing</strong>.</li> 
 <li>We released our TIP 2019 depth super-resolution code. Have fun! <a href="https://li-chongyi.github.io/proj_SR.html" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li> 
 <p> If you use this code, please cite the related paper. Thanks.</p>
 <p> C. Guo, C. Li, J. Guo, et al., “Hierarchical Features Driven Residual Learning for Depth Map Super-Resolution,” IEEE Trans. Image Process., vol. 28, no. 5, pp.2545-2557, 2019. </p>
@@ -83,7 +83,7 @@
 <p> C. Li, J. Guo, R. Cong, et al., “Underwater image enhancement by dehazing with minimum information loss and histogram distribution prior,” IEEE Trans. Image Process., vol. 25, no. 12, pp.5664-5677, 2016. </p>
 <p> C. Li, J. Guo, S. Chen, et al., “Underwater image restoration based on minimum information loss principle and optical properties of underwater imaging”, IEEE ICIP , pp. 1993-1997 (2016). </p>
  
-<li>Chunle Guo<sup>*</sup>, <strong>Chongyi Li<sup>*</sup></strong>, Jichang Guo, et al, <ud2>Hierarchical Features Driven Residual Learning for Depth Map Super-Resolution</ud2> is accepted by <strong>IEEE Transaction on Image Processing</strong>.</li> (<sup>*</sup>equal contribution and corresponding author)
+<li>Chunle Guo, <strong>Chongyi Li<sup>*</sup></strong>, Jichang Guo, et al, <ud2>Hierarchical Features Driven Residual Learning for Depth Map Super-Resolution</ud2> is accepted by <strong>IEEE Transactions on Image Processing</strong>.</li> (<sup>*</sup>co-first author and corresponding author)
 </ul>
 <br>
 <hr />
