--- a/proj_optical_saliency.html
+++ b/proj_optical_saliency.html
@@ -32,7 +32,8 @@
       <section>
 
 <h2>
-<a id="project_title" class="anchor" href="#project_title" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hierarchical Features Driven Residual Learning for Depth Map Super-Resolution</h2>
+<a id="project_title" class="anchor" href="#project_title" aria-hidden="true"><span class="octicon octicon-link"></span></a>Nested Network with Two-Stream Pyramid
+for Salient Object Detection in Optical Remote Sensing Images</h2>
 
 
 
@@ -40,7 +41,14 @@
 <h4>
 <a id="Introduction-page" class="anchor" href="#Introduction-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Introduction:</h4>
 
-<p>Rapid development of affordable and portable consumer depth cameras facilitates the use of depth information in many computer vision tasks such as intelligent vehicles and 3D reconstruction. However, depth map captured by low-cost depth sensors (e.g., Kinect) usually suffers from low spatial resolution, which limits its potential applications. In this paper, we propose a novel deep network for depth map super-resolution (SR), called DepthSR-Net. The proposed DepthSR-Net automatically infers a high resolution (HR) depth map from its low resolution (LR) version by hierarchical features driven residual learning. Specifically, DepthSR-Net is built on a residual U-Net deep network architecture. Given LR depth map, we first obtain the desired HR by bicubic interpolation upsampling, and then construct an input pyramid to achieve multiple level receptive fields. Next, we extract hierarchical features from the input pyramid, intensity image, and encoder-decoder structure of U-Net. Finally, we learn the residual between the interpolated depth map and the corresponding HR one using the rich hierarchical features. The final HR depth map is achieved by adding the learned residual to the interpolated depth map. We conduct an ablation study to demonstrate the effectiveness of each component in the proposed network. Extensive experiments demonstrate that the proposed method outperforms the state-of-the-art methods. Additionally, the potential usage of the proposed network in other low-level vision problems is discussed.
+<p>Arising from the various object types and scales, diverse imaging orientations, and cluttered backgrounds in optical remote sensing image (RSI), it is difficult to directly extend the success of salient object detection for nature scene image
+to the optical RSI. In this paper, we propose an end-to-end deep network called LV-Net based on the shape of network architecture, which detects salient objects from optical RSIs in
+a purely data-driven fashion. The proposed LV-Net consists of two key modules, i.e., a two-stream pyramid module (L-shaped module) and an encoder-decoder module with nested connections
+(V-shaped module). Specifically, the L-shaped module extracts a set of complementary information hierarchically by using a two-stream pyramid structure, which is beneficial to perceiving the
+diverse scales and local details of salient objects. The V-shaped module gradually integrates encoder detail features with decoder semantic features through nested connections, which aims at sup-
+pressing the cluttered backgrounds and highlighting the salient objects. In addition, we construct the first publicly available optical RSI dataset for salient object detection, including 800
+images with varying spatial resolutions, diverse saliency types, and pixel-wise ground truth. Experiments on this benchmark dataset demonstrate that the proposed method outperforms the
+state-of-the-art salient object detection methods both qualitatively and quantitatively.
 </p>
 
 <div style="text-align: center; display: block; margin-right: auto;">
@@ -51,14 +59,14 @@
 <h4>Paper:</h4>
     
 <p>
-  Chunle Guo, Chongyi Li, Jichang Guo, Runmin Cong, Huazhu Fu, Ping Han 
-  <strong>Hierarchical Features Driven Residual Learning for Depth Map Super-Resolution</strong>. 
-  <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/SR.pdf"><font color="#ff0000">[PDF]</font></a>
+  Chongyi Li, Runmin Cong, Junhui Hou, Member, IEEE, Sanyi Zhang, Yue Qian, and Sam Kwong, Fellow, IEEE
+  <strong>Nested Network with Two-Stream Pyramid for Salient Object Detection in Optical Remote Sensing Images</strong>. 
+  <a href=""><font color="#ff0000">[Comming soon]</font></a>
 </p>
 
  
 <hr />
-<h4>TensorFlow Codes: Coming Soon</h4>
+<h4>Result and Dataset: Coming Soon</h4>
 
 <hr />
         
