--- a/proj_optical_saliency.html
+++ b/proj_optical_saliency.html
@@ -52,7 +52,7 @@ state-of-the-art salient object detection methods both qualitatively and quantit
 </p>
 
 <div style="text-align: center; display: block; margin-right: auto;">
-<img src="sub_img/SR.png" border="0" width="600"><br></div><br>
+<img src="sub_img/LV-Net.png" border="0" width="600"><br></div><br>
  
 
 <hr />
