--- a/proj_optical_saliency.html
+++ b/proj_optical_saliency.html
@@ -40,7 +40,7 @@ for Salient Object Detection in Optical Remote Sensing Images</h2>
 
 <h4>
 <a id="Introduction-page" class="anchor" href="#Introduction-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Introduction:</h4>
-
+<div style="text-align: justify; display: block; margin-right: auto;">
 <p>Arising from the various object types and scales, diverse imaging orientations, and cluttered backgrounds in optical remote sensing image (RSI), it is difficult to directly extend the success of salient object detection for nature scene image
 to the optical RSI. In this paper, we propose an end-to-end deep network called LV-Net based on the shape of network architecture, which detects salient objects from optical RSIs in
 a purely data-driven fashion. The proposed LV-Net consists of two key modules, i.e., a two-stream pyramid module (L-shaped module) and an encoder-decoder module with nested connections
@@ -59,9 +59,9 @@ state-of-the-art salient object detection methods both qualitatively and quantit
 <h4>Paper:</h4>
     
 <p>
-  Chongyi Li, Runmin Cong, Junhui Hou, Member, IEEE, Sanyi Zhang, Yue Qian, and Sam Kwong, Fellow, IEEE
+  Chongyi Li, Runmin Cong, Junhui Hou, Sanyi Zhang, Yue Qian, and Sam Kwong, 
   <strong>Nested Network with Two-Stream Pyramid for Salient Object Detection in Optical Remote Sensing Images</strong>. 
-  <a href=""><font color="#ff0000">[Comming soon]</font></a>
+  <a href=""><font color="#ff0000">[Coming soon]</font></a>
 </p>
 
  
