--- a/index.html
+++ b/index.html
@@ -124,21 +124,23 @@
 <ul>
 <li>IEEE Transactions on Image Processing</li>
 <li>IEEE Transactions on Cybernetics</li>
+ <li>IEEE Transactions on Broadcasting</li>
 <li>IEEE Transactions on Instrumentation and Measurement</li>
 <li>IEEE Transactions on Circuits and Systems II: Express Briefs</li>  
+<li>IEEE ACCESS</li>
 <li>IEEE Signal Processing Letters</li>
+<li>IEEE Journal of Ocean Engineering</li>
 <li>Elsevier Journal of Ocean Engineering</li>
 <li>Elsevier Digital Signal Processing</li>
-<li>IEEE Journal of Ocean Engineering</li>
+<li>Elsevier Neurocomputing</li>
+<li>Elsevier Pattern Recognition Letters</li>
+<li>Elsevier Signal Processing: Image Communication</li>
+<li>Elsevier Journal of Computers & Graphics</li>
+<li>Springer SCIENCE CHINA Information Sciences</li>
+<li>Springer Machine Vision and Applications</li>
+<li>Springer EURASIP Journal on Image and Video Processing</li> 
 <li>IET Computer Vision</li>
 <li>SPIE Journal of Electronic Imaging</li>
-<li>SCIENCE CHINA Information Sciences</li>
-<li>IEEE ACCESS</li>
-<li>Pattern Recognition Letters</li>
-<li>Machine Vision and Applications</li>
-<li>EURASIP Journal on Image and Video Processing</li> 
-<li>Signal Processing: Image Communication</li>
-<li>Elsevier Journal of Computers & Graphics</li>
 <li>International Journal of Electrical and Computer Engineering</li>
 <li>24th International Conference on Pattern Recognition (ICPR), Beijing, China, 2018</li>
 <li>27th ACM International Conference on Multimedia (ACM MM), Nice, France, 2019 (Program Committee Member)</li>
