--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
+<li> Miao Yang, Jintong Hu, <strong>Chongyi Li</strong>, Gustava Rohde, Yixiang Du, and Ke Hu, <ud2>An In-depth Survey of Underwater Image Enhancement and Restoration</ud2> is accepted by <strong>IEEE ACCESS</strong>.</li>   
 <li> <strong>Chongyi Li</strong>, Runmin Cong, Junhui Hou, Sanyi Zhang, Yue Qian, Sam Kwong, <ud2>Nested Network with Two-Stream Pyramid for Salient Object Detection in Optical Remote Sensing Images</ud2> is accepted by <strong>IEEE Transactions on Geoscience and Remote Sensing</strong>.</li> 
 <li>We released our TIP 2019 depth super-resolution code. Have fun! <a href="https://li-chongyi.github.io/proj_SR.html" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li> 
 <p> If you use this code, please cite the related paper. Thanks.</p>
