--- a/sub_publication.html
+++ b/sub_publication.html
@@ -46,6 +46,7 @@
 
 <ol>
 <li> Saeed Anwar and <strong>Chongyi Li</strong>, Diving Deeper into Underwater Image Enhancement: A Survey, <strong><ud2>Submitted to IJCV</ud2></strong> <a href="https://arxiv.org/pdf/1907.07863.pdf" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>   
+<li> <strong>Chongyi Li</strong>,  Chunle Guo, Wenqi Ren, et al., An Underwater Image Enhancement Benchmark Dataset and Beyond, <strong><ud2>Submitted to TIP</ud2></strong> <a href="https://arxiv.org/pdf/1901.05495.pdf" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>   
 <li> Miao Yang, Jintong Hu, <strong>Chongyi Li</strong>, et al., An In-depth Survey of Underwater Image Enhancement and Restoration, <strong><ud2>IEEE ACCESS</ud2></strong> (SCI,IF.3.244), 2019.</li>  
 <li> <strong>Chongyi Li</strong>, Runmin Cong, Junhui Hou, et al., Nested Network with Two-Stream Pyramid for Salient Object Detection in Optical Remote Sensing Images, <strong><ud2>IEEE Transaction on Geoscience and Remote Sensing</ud2></strong> (SCI, IF=4.662), 2019. <a href="https://arxiv.org/pdf/1906.08462.pdf" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>
 <li> Bo Wang and <strong>Chongyi Li</strong>, A visual hierarchical framework based model for underwater image enhancement, <strong><ud2>Frontiers of Computer Science</ud2></strong> (SCI, IF=1.105), 2019.  <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/A%20visual%20hierarchical%20framework%20based%20model%20for%20underwater.pdf" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>  
