--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
 <li><a href="http://hzfu.github.io/index.html"><font color="#1C86EE">Huazhu Fu (Senior Research Scientist at IIAI, Abu Dhabi)</font></a></li>
 <li><a href="https://sites.google.com/site/junhuihoushomepage/home"><font color="#1C86EE">Junhui Hou (Assistant Professor at CityU, Hong Kong, China)</font></a></li>
 <li><a href="https://sites.google.com/site/renwenqi888/"><font color="#1C86EE">Wenqi Ren (Assistant Professor at State Key Laboratory of Information Security, IIE, CAS)</font></a></li>
-<li><a href="https://scholar.google.com/citations?user=vPJIHywAAAAJ&hl=zh-CN&oi=ao"><font color="#1C86EE">Saeed Anwar (Postdoc Research Fellow at ANU, CSIRO/Data61, Australia)</font></a></li>
-<li><a href="https://rmcong.github.io/"><font color="#1C86EE">Runmin Cong (Ph.D Candidate at TJU, China)</font></li> 
+<li><a href="https://scholar.google.com/citations?user=vPJIHywAAAAJ&hl=zh-CN&oi=ao"><font color="#1C86EE">Saeed Anwar (Research Fellow at ANU, CSIRO/Data61, Australia)</font></a></li>
+<li><a href="https://rmcong.github.io/"><font color="#1C86EE">Runmin Cong (Associate Professor, at Institute of Information Science, Beijing Jiaotong University， China)</font></li> 
 </ul>
 <br>
   
