--- a/proj_optical_saliency.html
+++ b/proj_optical_saliency.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Depth SR</title>
+    <title>Optical Remote Sensing Image Saliency</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
