--- a/proj_optical_saliency.html
+++ b/proj_optical_saliency.html
@@ -61,7 +61,7 @@ state-of-the-art salient object detection methods both qualitatively and quantit
 <p>
   Chongyi Li, Runmin Cong, Junhui Hou, Sanyi Zhang, Yue Qian, and Sam Kwong, 
   <strong>Nested Network with Two-Stream Pyramid for Salient Object Detection in Optical Remote Sensing Images</strong>. 
-  <a href="https://ieeexplore.ieee.org/document/8793227"><font color="#ff0000">TGRS, 2019</font></a>
+  <a href="https://ieeexplore.ieee.org/document/8793227"><font color="#ff0000">PDF(TGRS, 2019)</font></a>
 </p>
 
  
