--- a/proj_optical_saliency.html
+++ b/proj_optical_saliency.html
@@ -70,7 +70,6 @@ state-of-the-art salient object detection methods both qualitatively and quantit
 <p>
 <br><a href="https://drive.google.com/open?id=13_FNCJNGshgo2XzsD6XQZ2uOartfl6bI" target="_blank"><font color="#ff0000">[Google Drive Link]</font></a>
 <a href="https://pan.baidu.com/s/1REmANofjTqyJaQI_EXlJzQ" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
-<br>If you need the corresponding reference images and challenging underwater images, please email us and cite the related papers. Thanks.<br>
 </p> 
 <hr />
  
@@ -82,6 +81,13 @@ state-of-the-art salient object detection methods both qualitatively and quantit
 </p> 
 <hr />
 
+<!--<h4>Deep Model: </h4>
+<p>
+<br><a href="https://drive.google.com/open?id=10_QYTD4OfkUoB_An0pKFHXyAGPoWY0f_" target="_blank"><font color="#ff0000">[Google Drive Link]</font></a>
+<a href="https://pan.baidu.com/s/18W1Tya9VDYK4o_YbqEv0MA" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
+
+</p> 
+<hr />-->
 
       </section>
 
