--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
+ <li>We released our TGRS 2019 Salient Object Detection in Optical Remote Sensing Images (Dataset and Resutls). Have fun! <a href="https://li-chongyi.github.io/proj_optical_saliency.html" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li> 
+<p> If you use this code, please cite the related paper. Thanks.</p>
 <li> <strong>Chongyi Li</strong>, Chunle Guo, Jichang Guo, Ping Han, Huazhu Fu, Runmin Cong, <ud2>PDR-Net: Perception-inspired Single Image Dehazing Network with Refinement</ud2> is accepted by <strong>IEEE Transactions on Multimedia</strong>.</li> 
 <li> Miao Yang, Jintong Hu, <strong>Chongyi Li</strong>, Gustava Rohde, Yixiang Du, and Ke Hu, <ud2>An In-depth Survey of Underwater Image Enhancement and Restoration</ud2> is accepted by <strong>IEEE ACCESS</strong>.</li>   
 <li> <strong>Chongyi Li</strong>, Runmin Cong, Junhui Hou, Sanyi Zhang, Yue Qian, Sam Kwong, <ud2>Nested Network with Two-Stream Pyramid for Salient Object Detection in Optical Remote Sensing Images</ud2> is accepted by <strong>IEEE Transactions on Geoscience and Remote Sensing</strong>.</li> 
