--- a/proj_optical_saliency.html
+++ b/proj_optical_saliency.html
@@ -23,7 +23,7 @@
 <a href="http://dblp.uni-trier.de/pers/hd/l/Li:Chongyi" target="_blank">[DBLP]</a>  <br>
 <a href="https://scholar.google.com/citations?user=1_I0P-AAAAAJ&hl=zh-CN" target="_blank">[Google Scholar]</a> <br>
 </p> <br>
-<p class="view"><a href="https://li-chongyi.github.io">Homepage</a></p>
+<p class="view"><a href="https://li-chongyi.github.io/">Homepage</a></p>
 <p class="view"><a href="sub_publication.html">Publications</a></p>
 <p class="view"><a href="sub_projects.html">Projects</a></p>
 </header>
