--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
- <li>We released our TGRS 2019 Salient Object Detection in Optical Remote Sensing Images (Dataset and Resutls). Have fun! <a href="https://li-chongyi.github.io/proj_optical_saliency.html" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li> 
+<li><strong>ASIF-Net: Attention Steered Interweave Fusion Network for RGB-D salient Object Detection</strong>. Invited Talk, ShenZhen Institutes of Advanced Technology, Chinese Academy of Sciences. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/talk_poster1.jpg" target="_blank"><font color="#ff0000">[Poster]</font></a></a></li>  
+<li>We released our TGRS 2019 Salient Object Detection in Optical Remote Sensing Images (Dataset and Resutls). Have fun! <a href="https://li-chongyi.github.io/proj_optical_saliency.html" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li> 
 <p> If you use this code, please cite the related paper. Thanks.</p>
 <li> <strong>Chongyi Li</strong>, Chunle Guo, Jichang Guo, Ping Han, Huazhu Fu, Runmin Cong, <ud2>PDR-Net: Perception-inspired Single Image Dehazing Network with Refinement</ud2> is accepted by <strong>IEEE Transactions on Multimedia</strong>.</li> 
 <li> Miao Yang, Jintong Hu, <strong>Chongyi Li</strong>, Gustava Rohde, Yixiang Du, and Ke Hu, <ud2>An In-depth Survey of Underwater Image Enhancement and Restoration</ud2> is accepted by <strong>IEEE ACCESS</strong>.</li>   
