--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Special Sessions:</h2>  
   
 <ul>
-<li><font color="#000000"> We organize a special session in Asia-Pacific Signal and Information Processing Association Annual Summit and Conference(APSIPA ASC) 2019</font><a href="http://www.apsipa2019.org/#" target="_blank"><font color="#ff0000">[Link]</font>: Special Session on Multi-source Data Processing and Analysis: Models, Methods and Applications <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/APSIPA-ASC-2019-CfP.pdf" target="_blank"><font color="#ff0000">[call for papers]</font></a></a></li> 
+<li><font color="#000000"> We organize a special session in Asia-Pacific Signal and Information Processing Association Annual Summit and Conference(APSIPA ASC) 2019 </font><a href="http://www.apsipa2019.org/#" target="_blank"><font color="#ff0000"> [Link]</font>: Special Session on Multi-source Data Processing and Analysis: Models, Methods and Applications <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/APSIPA-ASC-2019-CfP.pdf" target="_blank"><font color="#ff0000">[call for papers]</font></a></a></li> 
 </ul>
 <br>
 <hr />
@@ -71,7 +71,7 @@
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
-<li> <strong>Chongyi Li</strong> and Saeed Anwar <ud2>Underwater Scene Prior Inspired Deep Underwater Image and Video Enhancement</ud2> is accepted by <strong>Pattern Recognition</strong>. We will release the codes soon.</li> 
+<li> <strong>Chongyi Li</strong> and Saeed Anwar, <ud2>Underwater Scene Prior Inspired Deep Underwater Image and Video Enhancement</ud2> is accepted by <strong>Pattern Recognition</strong>. We will release the codes soon.</li> 
 <li><strong>ASIF-Net: Attention Steered Interweave Fusion Network for RGB-D salient Object Detection</strong>. Invited Talk, ShenZhen Institutes of Advanced Technology, Chinese Academy of Sciences. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/talk_poster1.jpg" target="_blank"><font color="#ff0000">[Poster]</font></a></a></li>  
 <li>We released our TGRS 2019 Salient Object Detection in Optical Remote Sensing Images (Dataset and Resutls). Have fun! <a href="https://li-chongyi.github.io/proj_optical_saliency.html" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li> 
 <p> If you use this code, please cite the related paper. Thanks.</p>
