--- a/sub_publication.html
+++ b/sub_publication.html
@@ -49,7 +49,7 @@
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2019:</h4>
 
 <ol>
-<li> <strong>Chongyi Li</strong> and Saeed Anwar, Underwater Scene Prior Inspired Deep Underwater Image and Video Enhancement, <strong><ud2>Pattern Recognition</ud2></strong> (SCI, IF=5.898), 2019. </li> 
+<li> <strong>Chongyi Li</strong> and Saeed Anwar, Underwater Scene Prior Inspired Deep Underwater Image and Video Enhancement, <strong><ud2>Pattern Recognition</ud2></strong> (SCI, IF=5.898), 2019.<a href="https://www.sciencedirect.com/science/article/pii/S0031320319303401" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>
 <li> <strong>Chongyi Li</strong>, Chunle Guo, Jichang Guo, et al., PDR-Net: Perception-Inspired Single Image Dehazing Network with Refinement, <strong><ud2>IEEE Transaction on Multimedia</ud2></strong> (SCI, IF=5.452), 2019. <a href="https://ieeexplore.ieee.org/document/8792133" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>
 <li> <strong>Chongyi Li</strong>, Runmin Cong, Junhui Hou, et al., Nested Network with Two-Stream Pyramid for Salient Object Detection in Optical Remote Sensing Images, <strong><ud2>IEEE Transaction on Geoscience and Remote Sensing</ud2></strong> (SCI, IF=4.662), 2019. <a href="https://ieeexplore.ieee.org/document/8793227" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>
 <li> Miao Yang, Jintong Hu, <strong>Chongyi Li</strong>, et al., An In-depth Survey of Underwater Image Enhancement and Restoration, <strong><ud2>IEEE ACCESS</ud2></strong> (SCI,IF.3.244), 2019. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8786104" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>
