--- a/proj_underwater_image_synthesis.html
+++ b/proj_underwater_image_synthesis.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width">
   </head>
   <body>
     <div class="wrapper">
